# SHMTU_CAS

./: .gitignore  .tokeignore  README.md
Application/: .gitignore
Application/SHMTU-CAS-Login/: settings.gradle
Application/SHMTU-CAS-Login/src/main/kotlin/com/khm/shmtu/cas/: Main.kt
Application/SHMTU-CAS-Login/src/main/kotlin/com/khm/shmtu/cas/auth/: EpayAuth.kt
Application/SHMTU-CAS-Login/src/main/kotlin/com/khm/shmtu/cas/captcha/: Captcha.kt
Application/SHMTU-CAS-Login/src/main/kotlin/com/khm/shmtu/cas/demo/: BillDemo.kt
Application/SHMTU-CAS-Server/: .gitignore  Build.md  CMakeLists.txt  main.cpp
Deploy/: 内存占用.xlsx
Deploy/QT/SHMTU_CAS_OCR_Demo_QT/: CAS_OCR.cpp  CAS_OCR.h  CAS_OCR_QT.cpp  CAS_OCR_QT.h  CMakeLists.txt  CasNetwork.cpp  CasNetwork.h  QtOpenCV.cpp  QtOpenCV.hpp  QtUIHelper.cpp  QtUIHelper.h  README.md  STD_CPP_Utils.cpp  cross_platform_macro.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Deploy/SHMTU_CAS_OCR_Demo_Android/: build.gradle
Deploy/SHMTU_CAS_OCR_Demo_Android/app/: build.gradle
Deploy/SHMTU_CAS_OCR_Demo_Android/app/src/main/java/com/khm/shmtu/cas/ocr/demo/: MainActivity.kt
Deploy/SHMTU_CAS_OCR_Demo_Android/app/src/main/res/layout/: activate_main.xml
Deploy/SHMTU_CAS_OCR_Demo_Android/shmtu_ocr/src/main/cpp/: CAS_OCR.cpp  CAS_OCR.h  CMakeLists.txt
Deploy/SHMTU_CAS_OCR_Demo_Windows/: SHMTU_CAS_OCR_Demo.sln
Deploy/SHMTU_CAS_OCR_Demo_Windows/DotNet/SHMTU_CAS_OCR_CLR_Connector_ClassLibrary/: SHMTU_CAS_OCR_CLR_Connector_ClassLibrary.csproj
Deploy/SHMTU_CAS_OCR_Demo_Windows/DotNet/SHMTU_CAS_OCR_Demo_WPF/: MainWindow.xaml  OcrDemo.cs  SHMTU_CAS_OCR_Demo_WPF.csproj
Deploy/SHMTU_CAS_OCR_Demo_Windows/VC/NCNN_CLI/: CAS_OCR.cpp  CAS_OCR.h  NCNN_CLI.vcxproj  NCNN_CLI_Main.cpp
Deploy/SHMTU_CAS_OCR_Demo_Windows/VC/SHMTU_CAS_CLR_ClassLibrary/: SHMTU_CAS_CLR_ClassLibrary.vcxproj
Deploy/SHMTU_CAS_OCR_Demo_Windows/VC/SHMTU_CAS_OCR_Demo_VC/: CAS_OCR_Demo.rc  SHMTU_CAS_OCR_Demo_VC.vcxproj  SHMTU_CAS_URL.cpp  SHMTU_CAS_URL.h  SelectUtils.cpp  SelectUtils.h  VCUtils.cpp  VCUtils.h  WinMain1.cpp  WindowUtils.cpp  WindowUtils.h  resource.h
Deploy/SHMTU_CAS_OCR_Demo_Windows/VC/SHMTU_CAS_OCR_Server/: SHMTU_CAS_OCR_Server.cpp  SHMTU_CAS_OCR_Server.vcxproj  SHMTU_CAS_OCR_Server.vcxproj.filters
Homework/LaTeX/SHMTU_CV_FinalWork/: README.md  cleanup.ps1  cleanup.sh  khm_shmtu_cv_finalwork_202401.tex
Homework/LaTeX/SHMTU_CV_FinalWork/Chapter/: Abstract.tex  Catalog.tex  Intro.tex  TitlePage.tex
Homework/LaTeX/SHMTU_CV_FinalWork/Chapter/MainBody/: Chapter.1.tex  Chapter.10.tex  Chapter.11.tex  Chapter.12.tex  Chapter.2.tex  Chapter.3.tex  Chapter.4.tex  Chapter.5.tex  Chapter.6.tex  Chapter.7.tex  Chapter.8.tex  Chapter.9.tex
Homework/LaTeX/SHMTU_CV_FinalWork/References/: cv_finalwork.bib  ref.tex  ref_url.bib
Homework/LaTeX/SHMTU_CV_FinalWork/Template/: Format.tex  MyZiHao.tex  PkgTemplate.tex  clean_up_ext.ini
Train/SHMTU_CAS_OCR_RESNET/: predict_test.ipynb
Train/SHMTU_CAS_OCR_RESNET/src/classify/digit/: openvino_test1.py
Train/SHMTU_CAS_OCR_RESNET/src/classify/predict/: predict_file.py  predict_server_torch.py
Train/SHMTU_CAS_OCR_RESNET/src/classify/utils/: devices_selector.py
Train/SHMTU_CAS_OCR_RESNET/src/config/: config.py
